# HashQuant

./: .env.example  .gitignore  Cargo.toml  README.md  README_CN.md
crates/backtester/: Cargo.toml
crates/backtester/src/: lib.rs  metrics.rs  reporter.rs  simulator.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/traits/: mod.rs
crates/core/src/types/: mod.rs
crates/datafeed/: Cargo.toml
crates/datafeed/src/: error.rs  lib.rs  stream.rs
crates/datafeed/src/sources/: candle.rs  csv.rs  database.rs  exchange.rs  mod.rs
crates/datafeed/src/storage/: mod.rs
crates/datafeed/tests/: integration.rs
crates/exchange/: Cargo.toml
crates/exchange/examples/: demo.rs
crates/exchange/src/: lib.rs  utils.rs
crates/exchange/src/binance/: mod.rs
crates/exchange/src/coinbase/: mod.rs
crates/exchange/src/config/: mod.rs
crates/exchange/src/mock/: mod.rs
crates/exchange/src/okx/: mod.rs
crates/exchange/src/polymarket/: mod.rs
crates/exchange/src/testnet/: config.rs  mod.rs
crates/exchange/tests/: mock_integration.rs
crates/risk/: Cargo.toml
crates/risk/src/: manager.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: error.rs  lib.rs  strategy.rs
crates/strategy/src/engine/: mod.rs
crates/strategy/src/indicators/: boll.rs  ma.rs  macd.rs  mod.rs  rsi.rs
crates/strategy/src/strategies/: ma_cross.rs  mod.rs  rsi_mean_reversion.rs
crates/strategy/tests/: integration.rs
