[package]
name    = "hq-backtester"
version = "0.1.0"
edition = "2021"

[lib]
name = "hq_backtester"
path = "src/lib.rs"

[dependencies]
hq-core     = { path = "../core" }
hq-exchange = { path = "../exchange" }
hq-datafeed = { path = "../datafeed" }
hq-strategy = { path = "../strategy" }

tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "1"
tracing     = "0.1"

[dev-dependencies]
tokio-test = "0.4"
