[package]
name    = "hq-risk"
version = "0.1.0"
edition = "2021"

[lib]
name = "hq_risk"
path = "src/lib.rs"

[dependencies]
hq-core     = { path = "../core" }
hq-exchange = { path = "../exchange" }
hq-strategy = { path = "../strategy" }
hq-datafeed = { path = "../datafeed" }

serde       = { version = "1", features = ["derive"] }
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"