[package]
name    = "hq-strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
hq-core     = { path = "../core" }
hq-exchange = { path = "../exchange" }
hq-datafeed = { path = "../datafeed" }

tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "1"
tracing     = "0.1"

[dev-dependencies]
tokio-test         = "0.4"
tracing-subscriber = "0.3"
